--- a/config_example.yaml
+++ b/config_example.yaml
@@ -21,4 +21,30 @@ cams:
     type: PointGrey
     master: False
     serial: 17278795
+    # set options to None to use default
+    options:
+      # Note: modify these at your own risk! Don't change the order!
+      # many have dependencies that are hard to figure out, so the order matters.
+      # For example, ExposureAuto must be set to Off before ExposureTime can be changed. 
+      AcquisitionMode: Continuous # can capture one frame or multiple frames as well
+      ExposureAuto: 'Off' # manually set exposure
+      ExposureTime: 1000.0 # in microseconds, so 1000 = 1ms
+      # this downsamples image in half, enabling faster framerates
+      # it's not possible to change BinningHorizontal, but it is automatically changed by changing
+      # BinningVertical
+      BinningVertical: 2 
+      Height: 512 # max 1024 if Binning=1, else 512
+      Width: 640 # max 1280 if Binning=1, else 640
+      OffsetX: 0 # left value of ROI
+      OffsetY: 0 # right value of ROI
+      PixelFormat: Mono8
+      AcquisitionFrameRate: 60.0
+      GainAuto: 'Off'
+      Gain: 10.0
+      SharpnessAuto: 'Off'
+    strobe:
+      line: 2
+      duration: 0.0
+
+
 
